<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/orderByLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:elevation="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="25dp"
                        android:gravity="center_vertical"
                        android:text="@string/order_by"
                        android:textColor="@color/light_black"
                        android:textSize="17sp"
                        tools:ignore="RelativeOverlap" />

                    <Spinner
                        android:id="@+id/order"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:entries="@array/orders"
                        android:gravity="center_vertical"
                        android:paddingStart="50dp"
                        tools:ignore="RtlSymmetry" />

                </RelativeLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:paddingTop="8dp"
                    android:visibility="gone"
                    app:shimmer_repeat_mode="restart"
                    app:shimmer_shape="radial">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include layout="@layout/layout_shimmer" />

                        <include layout="@layout/layout_shimmer" />

                        <include layout="@layout/layout_shimmer" />

                        <include layout="@layout/layout_shimmer" />

                        <include layout="@layout/layout_shimmer" />

                        <include layout="@layout/layout_shimmer" />

                        <include layout="@layout/layout_shimmer" />

                        <include layout="@layout/layout_shimmer" />

                        <include layout="@layout/layout_shimmer" />

                        <include layout="@layout/layout_shimmer" />

                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:descendantFocusability="blocksDescendants"
                    android:nestedScrollingEnabled="true"
                    android:orientation="vertical"
                    android:overScrollMode="never"
                    android:paddingTop="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:reverseLayout="false" />

                <ImageView
                    android:id="@+id/error"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="300dp"
                    android:contentDescription="@string/error"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/no_data"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="300dp"
                    android:contentDescription="@string/no_data"
                    android:visibility="gone" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>